--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,7 +13,7 @@
 
     align-items: center;
     justify-content: center;
-    background-color: rgb(184, 92, 69);
+    /* background-color: rgb(184, 92, 69); */
 }
 
 .main{
@@ -39,13 +39,24 @@
     height: 0px;
 
     background: rgb(56, 56, 226);
-    transition: height 2s ease-in;
+    animation: water 15s ease-out backwards;
+    /* transition: height 3s ease-in ; */
 }
 
-.main:hover .tap-water{
+/* .main:hover .tap-water{
     height: 260px;
-}
+} */
 
+@keyframes water {
+    0%{
+        top: 17.6;
+        height: 0px;
+    }
+    100%{
+        top: 17.6%;
+        height: 250px;
+    }
+}
 .cup{
     width: 150px;
     height: 200px;
@@ -103,26 +114,24 @@
     background-color: rgb(7 7 240);
 
     position: absolute;
-    top: 50%;
+    top: 66.5%;
     left: 31.5%;
 
     border-bottom-left-radius: 30%;
     border-bottom-right-radius: 30%;
     z-index: 1;
 
-    animation: fill 5s ease-out 1.4s forwards;
+    animation: fill 3s ease-out 12s forwards;
     overflow: hidden;
 }
 
 @keyframes fill{
     0%{
-        top: 50%;
+        top: 66.5%;
         height: 0px;
     }
-    50%{
-        height: 50px;
-    }
     100%{
-        height: 93px;
+        top: 40%;
+        height: 150px;
     }
 }
